syntax = "proto3";

package grpc;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service gcron {
    rpc InitializeTask(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
    rpc Log(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
    rpc FinializeTask(Task) returns (google.protobuf.BoolValue) {}
}

message Task {
  bool FLock = 1;
  string FOverride = 2;
  int32 FDelay = 3;
  int32 Pid = 4;
  string GUID = 5;
  int32 UID = 6;
  string Parent = 7;
  string Hostname = 8;
  string Username = 9;
  string Command = 10;
  google.protobuf.Timestamp StartTime = 11;
  google.protobuf.Timestamp EndTime = 12;
  int32 ExitCode = 13;
  string Output = 14;
  google.protobuf.Timestamp SystemTime = 15;
  google.protobuf.Timestamp UserTime = 16;
  bool Success = 17;
}